# fabric_cm/credmgr/swagger_server/swagger/swagger.yaml
@@ -308,6 +308,54 @@ paths:
               schema:
                 $ref: '#/components/schemas/status_500_internal_server_error'
       x-openapi-router-controller: fabric_cm.credmgr.swagger_server.controllers.tokens_controller
+  /tokens/validate:
+    post:
+      tags:
+      - tokens
+      summary: Validate an identity token issued by Credential Manager
+      description: |
+        Validate an identity token issued by Credential Manager
+      operationId: tokens_validate_post
+      requestBody:
+        $ref: '#/components/requestBodies/payload_token'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/status_200_ok_no_content'
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/status_400_bad_request'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/status_401_unauthorized'
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/status_403_forbidden'
+        "404":
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/status_404_not_found'
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/status_500_internal_server_error'
+      x-openapi-router-controller: fabric_cm.credmgr.swagger_server.controllers.tokens_controller
   /tokens/revoke_list:
     get:
       tags:
@@ -710,7 +758,7 @@ components:
           description: Remote IP from where the token create request was received
         comment:
           type: string
-          description: Token expiry time
+          description: Comment provided at creation
         id_token:
           type: string
           description: Identity Token
